[package]
name = "clearurl"
version = "0.5.0"
edition = "2021"
description = "A rust implementation for ClearURL"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["clearurl_bot"]
exclude = ["rules"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
url = "2.2"
anyhow = "1.0"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["rt", "macros"]}
regex = "1.5.4"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3.9"
