[package]
name = "clearurl"
version = "0.6.1"
edition = "2021"
description = "A rust implementation for ClearURL"
documentation = "https://docs.rs/clearurl/"
repository = "https://github.com/Avimitin/clearurl"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
url = "2.4.1"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["rt", "macros"]}
regex = "1.5.4"
thiserror = "1.0.31"
lazy_static = { version = "1.4.0", optional = true }
anyhow = { version = "1.0.75", optional = true }

[features]
default = ["hooks"]
hooks = ["dep:lazy_static", "dep:anyhow"]
