[package]
name = "clearurl"
version = "0.7.2"
edition = "2021"
description = "A rust implementation for ClearURL"
documentation = "https://docs.rs/clearurl/"
repository = "https://github.com/Avimitin/clearurl"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
url = "2.5.4"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["rt", "macros"]}
regex = "1.11.1"
thiserror = "2.0.7"
lazy_static = { version = "1.5.0", optional = true }
anyhow = { version = "1.0.94", optional = true }

[features]
default = ["hooks"]
hooks = ["dep:lazy_static", "dep:anyhow" ]
bilibili_hooks = ["hooks"]
