[package]
name = "clearurl_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.20.1", features = ["full"] }
dotenv = "0.15.0"
regex = "1.5.4"
clearurl = "0.5.2"
url = "2.2.2"
anyhow = "1.0.55"
chrono = "0.4"
lazy_static = "1.4.0"
